--- a/bot/package.json
+++ b/bot/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "Uma Simples demonstração npm",
   "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js"
   "dependencies": {
     "node-wit": "^4.1.0",
     "twit": "^2.2.9"
+    "express": "^4.14.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {}, 
   },
   "repository": {
     "type": "git",
